--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,22 @@
 asgiref==3.5.0
+certifi==2022.5.18
+charset-normalizer==2.0.12
 Django==3.2.13
+django-channels==0.7.0
 django-ckeditor==6.3.2
 django-js-asset==2.0.0
+idna==3.3
 mysqlclient==2.1.0
+oauthlib==3.2.0
 Pillow==8.4.0
 pip==22.1
 PyMySQL==1.0.2
 pytz==2022.1
+requests==2.27.1
+requests-oauthlib==1.3.1
 setuptools==62.3.2
+six==1.16.0
 sqlparse==0.4.2
 typing_extensions==4.2.0
 tzdata==2021.5
+urllib3==1.26.9
